; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/tests/extr_display.c_main.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/tests/extr_display.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"degrees: %f\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [9 x i32], align 16
  store i32 0, i32* %1, align 4
  %3 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %4 = call i32 @av_display_rotation_set(i32* %3, i32 90)
  %5 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %6 = call i32 @print_matrix(i32* %5)
  %7 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %8 = call double @av_display_rotation_get(i32* %7)
  %9 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), double %8)
  %10 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %11 = call i32 @av_display_rotation_set(i32* %10, i32 -45)
  %12 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %13 = call i32 @print_matrix(i32* %12)
  %14 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %15 = call double @av_display_rotation_get(i32* %14)
  %16 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), double %15)
  %17 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %18 = call i32 @av_display_matrix_flip(i32* %17, i32 1, i32 0)
  %19 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %20 = call i32 @print_matrix(i32* %19)
  %21 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %22 = call double @av_display_rotation_get(i32* %21)
  %23 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), double %22)
  %24 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %25 = call i32 @av_display_matrix_flip(i32* %24, i32 0, i32 1)
  %26 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %27 = call i32 @print_matrix(i32* %26)
  %28 = getelementptr inbounds [9 x i32], [9 x i32]* %2, i64 0, i64 0
  %29 = call double @av_display_rotation_get(i32* %28)
  %30 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), double %29)
  ret i32 0
}

declare dso_local i32 @av_display_rotation_set(i32*, i32) #1

declare dso_local i32 @print_matrix(i32*) #1

declare dso_local i32 @printf(i8*, double) #1

declare dso_local double @av_display_rotation_get(i32*) #1

declare dso_local i32 @av_display_matrix_flip(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
